Fix social buttons wrapping

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -316,6 +316,7 @@ footer {
 }
 
 .social {
+  white-space: normal;
   a {
     padding: 5px;
     text-decoration: none !important;
